--- a/crumbs/pubspec.yaml
+++ b/crumbs/pubspec.yaml
@@ -12,6 +12,13 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_auth: ^4.17.3
+  firebase_core: ^2.25.3
+  cloud_firestore: ^4.15.3
+  google_maps_flutter: ^2.0.10
+  geolocator: ^10.1.0
+  url_launcher: ^6.0.12
+
   english_words: ^4.0.0
   provider: ^6.0.0
   google_fonts: ^6.1.0
@@ -20,7 +27,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
