--- a/crumbs/ios/Runner/Info.plist
+++ b/crumbs/ios/Runner/Info.plist
@@ -14,6 +14,10 @@
 	<string>6.0</string>
 	<key>CFBundleName</key>
 	<string>crumbs</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location for better app functionality.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We may need your location when the app is in the background.</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
