--- a/crumbs/ios/Runner/Info.plist
+++ b/crumbs/ios/Runner/Info.plist
@@ -12,6 +12,8 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to upload images for restaurant posts.</string>
 	<key>CFBundleName</key>
 	<string>crumbs</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
