--- a/crumbs/pubspec.yaml
+++ b/crumbs/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   google_maps_flutter: ^2.0.10
   geolocator: ^10.1.0
   url_launcher: ^6.0.12
+  firebase_storage: ^11.6.4
+  image_picker: ^1.0.7
 
   english_words: ^4.0.0
   provider: ^6.0.0
